--- a/src/UI_Files/learn_activity.ui
+++ b/src/UI_Files/learn_activity.ui
@@ -66,13 +66,26 @@
      <string>PushButton</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>160</y>
+      <width>741</width>
+      <height>431</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>60</y>
-      <width>361</width>
-      <height>271</height>
+      <x>300</x>
+      <y>0</y>
+      <width>451</width>
+      <height>311</height>
      </rect>
     </property>
    </widget>
