--- a/src/UI_Files/learn_activity.ui
+++ b/src/UI_Files/learn_activity.ui
@@ -17,7 +17,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>240</x>
+      <x>560</x>
       <y>400</y>
       <width>60</width>
       <height>16</height>
@@ -30,8 +30,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>400</y>
+      <x>560</x>
+      <y>470</y>
       <width>60</width>
       <height>16</height>
      </rect>
@@ -40,53 +40,20 @@
      <string>TextLabel</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QLabel" name="label_imageView">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>500</y>
-      <width>113</width>
-      <height>32</height>
+      <x>240</x>
+      <y>20</y>
+      <width>360</width>
+      <height>270</height>
      </rect>
     </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_2">
-    <property name="geometry">
-     <rect>
-      <x>620</x>
-      <y>500</y>
-      <width>113</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>160</y>
-      <width>741</width>
-      <height>431</height>
-     </rect>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(180,180,180,0.6);</string>
     </property>
     <property name="text">
      <string/>
-    </property>
-   </widget>
-   <widget class="QGraphicsView" name="graphicsView">
-    <property name="geometry">
-     <rect>
-      <x>300</x>
-      <y>0</y>
-      <width>451</width>
-      <height>311</height>
-     </rect>
     </property>
    </widget>
   </widget>
